--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@
   url: "/officials/"
   side: left
 
-- title: Industrail Advisory Board
+- title: Industrial Advisory Board
   url: "/industrial/"
   side: left  
 
